--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "league/oauth2-client": "~1.0"
     },
     "autoload": {
         "psr-0": {
