--- a/.travis.yml
+++ b/.travis.yml
@@ -1,39 +1,49 @@
+sudo: false
 language: php
+
 php:
   - 5.3
   - 5.4
   - 5.5
+  - 5.6
+  - 7.0
+  - hhvm
 
+matrix:
+  allow_failures:
+    - php: 7.0
+    - php: hhvm
+
+addons:
+  apt:
+    packages:
+      - graphviz
+      
 before_script:
   ## Composer
-  - curl -s http://getcomposer.org/installer | php
-  - php composer.phar install
-  ## PHP_CodeSniffer
-  - pyrus install pear/PHP_CodeSniffer
-  - phpenv rehash
-  ## PHP Copy/Paste Detector
-  - curl -o phpcpd.phar https://phar.phpunit.de/phpcpd.phar
-  ## PHP Mess Detector
-  - pear config-set preferred_state beta
-  - printf "\n" | pecl install imagick
-  - pear channel-discover pear.phpmd.org
-  - pear channel-discover pear.pdepend.org
-  - pear install --alldeps phpmd/PHP_PMD
-  - phpenv rehash
-  ## PHPLOC
-  - curl -o phploc.phar https://phar.phpunit.de/phploc.phar
+  - composer self-update
+  - composer install --prefer-source
+  ## PHPDocumentor
+  - mkdir -p build/docs
+  - mkdir -p build/coverage
 
 script:
   ## PHP_CodeSniffer
-  - phpcs --standard=PSR1 src/
-  - phpcs --standard=PSR2 src/
+  - ./vendor/bin/phpcs src/ tests/ --standard=PSR2 -n
   ## PHP Copy/Paste Detector
-  - php phpcpd.phar --verbose src/
+  # - ./vendor/bin/phpcpd src/
   ## PHP Mess Detector
-  - phpmd src/ text codesize,unusedcode,naming,design
+  - ./vendor/bin/phpmd src/,tests/ text ./phpmd.xml.dist
+  ## PHPUnit
+  - ./vendor/bin/phpunit -c ./ --coverage-text --coverage-html ./build/coverage
   ## PHPLOC
-  - php phploc.phar src/
-
-notifications:
-  email:
-    - progi1984@gmail.com
+  - ./vendor/bin/phploc src/
+  ## PHPDocumentor
+  - ./vendor/bin/phpdoc -q -d ./src -t ./build/docs --template="responsive-twig"
+  
+after_script:
+  ## PHPDocumentor
+  ## - bash .travis_shell_after_success.sh
+  ## Scrutinizer
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
