--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,14 @@
         "php": ">=5.3.0",
         "league/oauth2-client": "~1.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*",
+        "phpdocumentor/phpdocumentor":"2.*",
+        "phpmd/phpmd": "2.*",
+        "sebastian/phpcpd": "2.*",
+        "phploc/phploc": "2.*",
+        "squizlabs/php_codesniffer": "2.*"
+    },
     "autoload": {
         "psr-0": {
             "Progi1984": "src/"
