--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ sudo: false
 language: php
 
 php:
-  - 5.3
-  - 5.4
   - 5.5
   - 5.6
   - 7.0
@@ -29,11 +27,13 @@ before_script:
 
 script:
   ## PHP_CodeSniffer
-  - ./vendor/bin/phpcs src/ tests/ --standard=PSR2 -n
+  #### tests/ 
+  - ./vendor/bin/phpcs src/ --standard=PSR2 -n
   ## PHP Copy/Paste Detector
   # - ./vendor/bin/phpcpd src/
   ## PHP Mess Detector
-  - ./vendor/bin/phpmd src/,tests/ text ./phpmd.xml.dist
+  #### ,tests/
+  - ./vendor/bin/phpmd src/ text ./phpmd.xml.dist
   ## PHPUnit
   - ./vendor/bin/phpunit -c ./ --coverage-text --coverage-html ./build/coverage
   ## PHPLOC
