--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -13,9 +13,9 @@ tools:
         enabled: true
         config:
             ruleset: phpmd.xml.dist
-    external_code_coverage:
-        enabled: true
-        timeout: 900
+    #external_code_coverage:
+    #    enabled: true
+    #    timeout: 900
     php_cpd: true
     # php_sim: # Temporarily disabled to allow focus on things other than duplicates
     #    min_mass: 40
